--- a/src/WinFormsLegacyDataGrid/WinFormsLegacyDataGrid.csproj
+++ b/src/WinFormsLegacyDataGrid/WinFormsLegacyDataGrid.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <!--<ImplicitUsings>enable</ImplicitUsings>-->
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
