--- a/src/WinFormsLegacyDataGrid/WinFormsLegacyDataGrid.csproj
+++ b/src/WinFormsLegacyDataGrid/WinFormsLegacyDataGrid.csproj
@@ -8,4 +8,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\*.ico;">
+      <LogicalName>System.Windows.Forms.%(FileName)</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
