--- a/src/WinFormsLegacyDataGrid/WinFormsLegacyDataGrid.csproj
+++ b/src/WinFormsLegacyDataGrid/WinFormsLegacyDataGrid.csproj
@@ -14,4 +14,11 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.49-beta">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
